<resources>
    <string name="app_name">Your room</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_add">Add</string>
    <string name="title_notification">Notice</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="your_room_tx">Your Room</string>
    <string name="rent_button">Rent</string>
    <string name="rent">Rent House</string>
    <string name="daily_button">Daily</string>
    <string name="city_and_region_tx">City and region</string>
    <string name="new_buildings_button">New buildings</string>
    <string name="warehouse_button">Warehouse</string>
    <string name="favorites_tx">Favorites</string>
    <string name="residential_button">Residential</string>
    <string name="non_residential_button">Non residential</string>
    <string name="email">Email</string>
    <string name="phone_tv">Phone</string>
    <string name="location_tx">Location</string>
    <string name="address_tx">Address</string>
    <string name="category_tx">Category</string>
    <string name="price_tv">Price</string>
    <string name="hint_price">Price per room</string>
    <string name="addPhoto_tx">Add a photo</string>
    <string name="description_tx">Description</string>
    <string name="contacts_tx">Contacts</string>
    <string name="publish_tx">Publish</string>

    <string-array name="catNames">
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Васька</item>
        <item>Рыжик</item>
    </string-array>
    <string name="title_activity_daily">DailyActivity</string>
    <string name="tv_name">Name</string>
    <string name="tv_person_name">Person Name</string>
    <string name="tv_age">Age</string>
    <string name="tv_sex">Sex</string>
    <string name="tv_registration">registration</string>
    <string name="tx_exit">Exit</string>
    <string name="tx_login">Login</string>
</resources>