<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.FavoritesFragment">

    <TextView
        android:id="@+id/tx_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/favorites_tx"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_living_quarters"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_favorites"
        android:layout_marginTop="15dp"
        android:text="@string/residential_button" />

    <Button
        android:id="@+id/button_non_residential_premises"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_favorites"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/button_living_quarters"
        android:text="@string/non_residential_button" />
    <ProgressBar
        android:id="@+id/progress_circle_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_favorites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_non_residential_premises">

    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>