<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_foam"
    tools:context=".presentation.activity.LoginActivity">

    <TextView
        android:id="@+id/yourRoom_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/your_room_tx"
        android:textColor="@color/ocean"
        android:textSize="40sp"
        android:fontFamily="@font/font_anek"
        app:layout_constraintEnd_toStartOf="@+id/imageAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edEmail_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="E-mail"
        android:fontFamily="@font/font_anek"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:backgroundTint="@color/deep_water"
        android:textColor="@color/ocean"
        android:textColorHint="@color/ocean"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourRoom_tx" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:fontFamily="@font/font_anek"
        android:backgroundTint="@color/deep_water"
        android:textColor="@color/ocean"
        android:textColorHint="@color/ocean"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edEmail_pass"
        app:layout_constraintStart_toStartOf="@+id/edEmail_pass"
        app:layout_constraintTop_toBottomOf="@+id/edEmail_pass" />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/wave"
        android:elevation="6dp"
        android:fontFamily="@font/font_anek"
        android:textStyle="normal"
        android:stateListAnimator="@null"
        android:text="@string/tv_registration"
        android:textColor="@color/ocean"
        android:translationZ="6dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edPass"
        app:layout_constraintStart_toStartOf="@+id/edPass"
        app:layout_constraintTop_toBottomOf="@+id/edPass" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="login"
        android:elevation="6dp"
        android:translationZ="6dp"
        android:stateListAnimator="@null"
        android:backgroundTint="@color/wave"
        android:textColor="@color/ocean"
        android:fontFamily="@font/font_anek"
        app:layout_constraintEnd_toEndOf="@+id/btSignUp"
        app:layout_constraintStart_toStartOf="@+id/btSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btSignUp" />

    <EditText
        android:id="@+id/edPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tv_person_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:backgroundTint="@color/deep_water"
        android:textColor="@color/ocean"
        android:textColorHint="@color/ocean"
        android:fontFamily="@font/font_anek"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone_tv"
        android:inputType="phone"
        android:minHeight="48dp"
        android:backgroundTint="@color/deep_water"
        android:textColor="@color/ocean"
        android:textColorHint="@color/ocean"
        android:fontFamily="@font/font_anek"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPass"
        app:layout_constraintTop_toBottomOf="@+id/edPass" />

    <EditText
        android:id="@+id/edAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tv_age"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:backgroundTint="@color/deep_water"
        android:textColor="@color/ocean"
        android:textColorHint="@color/ocean"
        android:fontFamily="@font/font_anek"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edPersonName"
        app:layout_constraintStart_toStartOf="@+id/edPersonName"
        app:layout_constraintTop_toBottomOf="@+id/edPersonName" />

    <EditText
        android:id="@+id/edSex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tv_sex"
        android:minHeight="48dp"
        android:backgroundTint="@color/deep_water"
        android:textColor="@color/ocean"
        android:textColorHint="@color/ocean"
        android:fontFamily="@font/font_anek"
        app:layout_constraintEnd_toEndOf="@+id/edAge"
        app:layout_constraintStart_toStartOf="@+id/edAge"
        app:layout_constraintTop_toBottomOf="@+id/edAge" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tv_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:backgroundTint="@color/deep_water"
        android:textColor="@color/ocean"
        android:textColorHint="@color/ocean"
        android:visibility="visible"
        android:fontFamily="@font/font_anek"
        app:layout_constraintEnd_toEndOf="@+id/edPhone"
        app:layout_constraintStart_toStartOf="@+id/edPhone"
        app:layout_constraintTop_toBottomOf="@+id/edPhone" />

    <Button
        android:id="@+id/registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/wave"
        android:textColor="@color/ocean"
        android:text="@string/tv_registration"
        android:elevation="6dp"
        android:translationZ="6dp"
        android:stateListAnimator="@null"
        android:visibility="visible"
        android:fontFamily="@font/font_anek"
        app:layout_constraintEnd_toEndOf="@+id/edSex"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edSex"
        app:layout_constraintTop_toBottomOf="@+id/edSex" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/wave"
        android:textColor="@color/ocean"
        android:elevation="6dp"
        android:translationZ="6dp"
        android:stateListAnimator="@null"
        android:text="@string/tx_login"
        android:visibility="visible"
        android:fontFamily="@font/font_anek"
        app:layout_constraintEnd_toEndOf="@+id/registration"
        app:layout_constraintStart_toStartOf="@+id/registration"
        app:layout_constraintTop_toBottomOf="@+id/registration" />

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/edEmail_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>